Can dynamically adjust test item position.

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -875,6 +875,7 @@
                 android:textColor="#ffffff"
                 android:text="Copy test log to UDisk."
                 android:layout_weight="8"
+                android:textSize="24sp"
                 android:id="@+id/copyto_udisk"
                 android:onClick="copyto_udisk_click" />
             <TextView
