--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -873,7 +873,7 @@
                 android:layout_height="wrap_content"
                 android:background="#111111"
                 android:textColor="#ffffff"
-                android:text="Copy test log to UDisk."
+                android:text="Copy test log to server."
                 android:layout_weight="8"
                 android:textSize="24sp"
                 android:id="@+id/copyto_udisk"
